# MathModelling

./: .gitignore  CLAUDE.md  README.md  reimplement.ipynb  sim.html
project/: .gitignore  Makefile  README.md  conftest.py  demo.html  pyproject.toml
project/docs/: derivation.md  team_split.md
project/experiments/: fig10_three_bus_returnmap.py  fig11_three_bus_phase.py  fig2_time_headway.py  fig3_zoom.py  fig4_tour_time.py  fig5_zoom.py  fig6_return_map.py  fig7_mean_rms.py  fig8_phase_diagram.py  fig9_three_bus_bifurcation.py  fig_sensitivity.py
project/notebooks/: reproduction.ipynb
project/src/nagatani/: __init__.py  analysis.py  plotting.py  simulation.py
project/tests/: test_simulation.py
report/: main.tex  sample.bib
slides/: main.tex  main_en.tex
slides/hust_theme/: Slide_HUST.tex  beamerthemeHUST.sty
source_code/: README.md  implement_3bus.ipynb  reimplement_2bus.ipynb  requirements.txt  sensitivity_robustness.ipynb  sim.html
